# cdesktopenv-code

cde/: .gitignore  configure.ac  copyright.in
cde/contrib/rc/linux/: dtlogin
cde/contrib/systemd/: Makefile  dtlogin.service
cde/contrib/systemd/getty@.service.d/: 00-cde-fix-utmp.conf
cde/contrib/systemd/getty@tty1.service.d/: 00-cde-no-reset.conf
cde/contrib/systemd/session-.scope.d/: 49-cde-timeout.conf
cde/doc/common/help/: HELPEnt.sgm.in
cde/doc/en_US.UTF-8/man/: Makefile.am
cde/lib/DtHelp/: Font.c  Makefile.am
cde/lib/DtHelp/il/: Makefile.am
cde/lib/DtMmdb/: Makefile.am
cde/lib/DtMmdb/HardCopy/: Makefile.am
cde/lib/DtMmdb/StyleSheet/: Makefile.am
cde/lib/DtMmdb/api/: Makefile.am
cde/lib/DtMmdb/btree/: Makefile.am  btree.C  btree.h
cde/lib/DtMmdb/btree_berkeley/: Makefile.am
cde/lib/DtMmdb/compression/: Makefile.am  huffman.C
cde/lib/DtMmdb/diskhash/: Makefile.am
cde/lib/DtMmdb/dstr/: Makefile.am
cde/lib/DtMmdb/dti_cc/: Makefile.am
cde/lib/DtMmdb/dti_excs/: Makefile.am
cde/lib/DtMmdb/dynhash/: Makefile.am
cde/lib/DtMmdb/hmphf/: Makefile.am
cde/lib/DtMmdb/index/: Makefile.am  btree_index.h  fast_mphf.C  index.C  mphf_index.C
cde/lib/DtMmdb/mgrs/: Makefile.am  misc.C  misc.h
cde/lib/DtMmdb/object/: Makefile.am  oid_list.C
cde/lib/DtMmdb/oliasdb/: Makefile.am
cde/lib/DtMmdb/schema/: Makefile.am  index_desc.C
cde/lib/DtMmdb/storage/: Makefile.am
cde/lib/DtMmdb/utility/: Makefile.am  macro.h  types.h
cde/lib/DtMrm/: Makefile.am
cde/lib/DtPamSvc/: Makefile.am  PamSvc.c
cde/lib/DtPrint/: Makefile.am
cde/lib/DtSearch/: Makefile.am  boolyac.y
cde/lib/DtSearch/raima/: Makefile.am
cde/lib/DtSvc/: Makefile.am
cde/lib/DtTerm/: Makefile.am
cde/lib/DtTerm/Term/: Makefile.am
cde/lib/DtTerm/TermPrim/: Makefile.am  TermPrim.c  TermPrimRenderMb.c
cde/lib/DtTerm/TermView/: Makefile.am
cde/lib/DtTerm/util/: Makefile.am
cde/lib/DtWidget/: Editor.c  Makefile.am
cde/lib/DtXinerama/: Makefile.am
cde/lib/csa/: Makefile.am
cde/lib/tt/lib/: Makefile.am
cde/lib/tt/lib/api/c/: Makefile.am
cde/lib/tt/lib/api/dnd/: Makefile.am
cde/lib/tt/lib/db/: Makefile.am
cde/lib/tt/lib/mp/: Makefile.am
cde/lib/tt/lib/tttk/: Makefile.am
cde/lib/tt/lib/util/: Makefile.am
cde/lib/tt/mini_isam/: Makefile.am  isam_impl.h  isam_prototypes.h  isbsearch.c  iskeycmp.c  issort.c
cde/lib/tt/slib/: Makefile.am
cde/programs/dtcalc/: Makefile.am  calctool.c  functions.c
cde/programs/dtcm/dtcm/: Makefile.am  rfp.c  x_graphics.c
cde/programs/dtcm/libDtCmP/: Makefile.am
cde/programs/dtcm/server/: Makefile.am
cde/programs/dtcreate/: ErrorDialog.c  cmncbs.c  icon_selection_dialog.c
cde/programs/dtdocbook/: Makefile.am
cde/programs/dtdocbook/doc_utils/: Makefile.am
cde/programs/dtdocbook/dtsr/: Makefile.am
cde/programs/dtdocbook/infolib/: Makefile.am
cde/programs/dtdocbook/instant/: Makefile.am
cde/programs/dtdspmsg/: Makefile.am
cde/programs/dtexec/: Makefile.am
cde/programs/dtfile/: Makefile.am
cde/programs/dtfile/dtcopy/: Makefile.am
cde/programs/dthelp/dthelpdemo/: Makefile.am
cde/programs/dthelp/dthelpgen/: Makefile.am  dthelpgen.msg
cde/programs/dthelp/dthelpprint/: Makefile.am
cde/programs/dthelp/dthelpview/: Makefile.am
cde/programs/dticon/: Makefile.am
cde/programs/dtimsstart/: Makefile.am
cde/programs/dtksh/: Makefile.am  dtkcmds.c  dtkcvt.c  widget.c  xmcmds.c  xmcvt.c  xmwidgets.c
cde/programs/dtlogin/: Makefile.am  access.c  account.c  auth.c  dm.c  dm.h  dpylist.c  dtchooser.c  genauth.c  resource.c  session.c  util.c  vgmain.c  vgproto.h  xdmauth.c
cde/programs/dtlogin/config/: 0070.systemd.src  Makefile.am  (+3 more)
cde/programs/dtpad/: Makefile.am
cde/programs/dtpdm/: Makefile.am
cde/programs/dtpdmd/: Makefile.am
cde/programs/dtprintinfo/: Makefile.am
cde/programs/dtsession/: Makefile.am  sys.resources.src
cde/programs/dtspcd/: Makefile.am
cde/programs/dtsr/: Makefile.am
cde/programs/dtstyle/: Makefile.am
cde/programs/dtterm/: Makefile.am
cde/programs/dtudcexch/: Makefile.am
cde/programs/dtwm/: Makefile.am  WmManage.c  WmResParse.c
cde/programs/fontaliases/: mk_fonts_alias.c
cde/util/tradcpp/: bool.h
(+61 files in other folders)
